Scale Test Setup (#1)
setup vpc, bastion, ec2 nodes
install k3s and plural agent via script on each ec2 node

---------

Co-authored-by: John Blackwell <john.blackwell@treno.io>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .terraform/
+.env
+
+terraform/key_pair.tf
+
+terraform/my-key-pair.pem
+
+*.tfvars
+
+*.pem
+
+*.code-workspace
+
+terraform.tfstate
+terraform.tfstate.backup
